# cpp

./: .gitignore  ROADMAP.md  build.sh  cspell.json
C++/: ROADMAP.md
C++/Drills/: README.md  clear.ps1  clear.sh  drill01.cpp  verify.ps1  verify.sh
C++/Intro to C++ Programming/: README.md  main.cpp
GameEngine/: .gitignore  README.md  ROADMAP.md
GameEngine/step01/: CMakeLists.txt  step-01-window.md
GameEngine/step01/include/glad/: glad.h
GameEngine/step01/src/: glad.c  main.cpp
GameEngine/step02/: step-02-architecture.md
GameEngine/step03/: CMakeLists.txt  step-03-triangle.md
GameEngine/step03/src/: Engine.cpp  Engine.h  Mesh.h  main.cpp
GameEngine/step03/src/renderer/: IRenderer.h  RendererFactory.cpp
GameEngine/step03/src/renderer/dx12/: DX12Renderer.cpp  DX12Renderer.h
GameEngine/step03/src/renderer/vulkan/: VulkanRenderer.cpp
GameEngine/step04/: CMakeLists.txt  build.sh  clean.sh
GameEngine/step04/engine/: CMakeLists.txt
GameEngine/step04/engine/cmake/: CupcakeConfig.cmake.in
GameEngine/step04/engine/include/: Engine.h
GameEngine/step04/engine/src/: Engine.cpp  README.md
GameEngine/step04/engine/src/renderer/: IRenderer.h
GameEngine/step04/engine/src/renderer/dx12/: DX12Renderer.cpp
GameEngine/step04/engine/src/renderer/vulkan/: VulkanRenderer.cpp  VulkanRenderer.h
GameEngine/step04/install-cupcake-dx12/lib/cmake/Cupcake/: CupcakeConfig.cmake  CupcakeTargets.cmake
GameEngine/step04/install-cupcake-vulkan/lib/cmake/Cupcake/: CupcakeConfig.cmake  CupcakeTargets.cmake
GameEngine/step04/snake/: CMakeLists.txt
GameEngine/step04/snake/src/: main.cpp
GameEngine/step05/: build.sh  clean.sh  step-05-win32.md
GameEngine/step05/engine/: CMakeLists.txt
GameEngine/step05/engine/cmake/: CupcakeConfig.cmake.in
GameEngine/step05/engine/src/: Engine.cpp
GameEngine/step05/engine/src/renderer/dx12/: DX12Renderer.cpp  DX12Renderer.h
GameEngine/step05/engine/src/renderer/vulkan/: VulkanRenderer.cpp
GameEngine/step05/install-cupcake-vulkan/include/: Engine.h  Scene.h
GameEngine/step05/install-cupcake-vulkan/lib/cmake/Cupcake/: CupcakeConfig.cmake  CupcakeTargets-noconfig.cmake  CupcakeTargets.cmake
GameEngine/step05/snake/src/: main.cpp
GameEngine/v0/: CMakeLists.txt  build.sh
GameEngine/v0/src/: main.cpp
GameEngine/v0/src/renderer/dx12/: DX12Renderer.cpp
GameEngine/v0/src/renderer/vulkan/: VulkanRenderer.cpp  VulkanRenderer.h
SDL2/: NOTES.md  ROADMAP.md  build.sh
SDL2/step01/: main.cpp
helloworld/: README.md  main.cpp
phase1/: CMakeLists.txt  main.cpp
